improve route selection algo